改为静态方法